--- a/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-18 01:40+0200\n"
-"PO-Revision-Date: 2015-04-17 23:41+0000\n"
+"POT-Creation-Date: 2015-05-06 17:14+0200\n"
+"PO-Revision-Date: 2015-05-06 15:14+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
@@ -2312,6 +2312,9 @@ msgstr "People's Democratic Republic of Yemen"
 msgid "Perform a trial run with no changes made"
 msgstr "Execute um teste sem alterações"
 
+msgid "Performance statistics"
+msgstr ""
+
 msgid "Period of validity"
 msgstr "Período de validade"
 
@@ -3122,6 +3125,11 @@ msgid "Specifies whether it is allowed to login as superuser."
 msgstr "Especifica se é permitido fazer o login como superusuário."
 
 msgid ""
+"Specifies whether the system performance statistics are collected "
+"periodically."
+msgstr ""
+
+msgid ""
 "Specifies whether to monitor the system status and select the most "
 "appropriate CPU level."
 msgstr "Especifica quando monitorizar o estado do sistema e seleciona o nível mais apropriado para o CPU."
@@ -3355,6 +3363,9 @@ msgid ""
 "this. This can be particularly useful on systems with many users to allow a "
 "single share to be used flexibly by each user."
 msgstr "As permissões de novos ficheiros e diretorias são normalmente regidas para criar mascaras e diretórios mascarados, mas as permissões herdadas substituem essas. Isto pode ser particularmente útil em sistemas com muitos utilizadores para permitir que uma unica partilha seja usada flexivelmente por outro utilizador."
+
+msgid "The public key in RFC 4716 SSH public key file format."
+msgstr ""
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3885,6 +3896,9 @@ msgstr "Versão"
 
 msgid "Vietnam"
 msgstr "Vietname"
+
+msgid "VirtIO device"
+msgstr ""
 
 msgid "Volume"
 msgstr "Volume"
