--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 17:14+0200\n"
-"PO-Revision-Date: 2015-05-06 15:14+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-05-07 02:10+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2312,7 +2312,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "設定を変更せずにテスト実行します"
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "パフォーマンス統計"
 
 msgid "Period of validity"
 msgstr "有効期間"
@@ -3126,7 +3126,7 @@ msgstr "スーパーユーザーとしてログインすることを許可する
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr ""
+msgstr "システムのパフォーマンス統計を定期的に収集するかどうかを指定します。"
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3364,7 +3364,7 @@ msgid ""
 msgstr "新しいファイルとディレクトリのパーミッションは通常、Create mask と Directory mask によって制御されていますが、パーミッションパラメータはこれを無効にします。これは、1つの共有が各ユーザによって柔軟に利用される事を可能にし、多くのユーザとシステムで有益です。"
 
 msgid "The public key in RFC 4716 SSH public key file format."
-msgstr ""
+msgstr "RFC4716 SSH公開鍵ファイル形式での公開鍵。"
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3897,7 +3897,7 @@ msgid "Vietnam"
 msgstr "ベトナム"
 
 msgid "VirtIO device"
-msgstr ""
+msgstr "VirtIO デバイス"
 
 msgid "Volume"
 msgstr "ボリューム"
