--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 17:14+0200\n"
-"PO-Revision-Date: 2015-05-06 15:14+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-05-06 22:59+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/projects/p/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2313,7 +2313,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "執行一次試行，不作做任何更改"
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "效能統計資料"
 
 msgid "Period of validity"
 msgstr "有效期間"
@@ -3127,7 +3127,7 @@ msgstr "指定是否允許以超級用戶身份登入。"
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr ""
+msgstr "指定系統是否定期收集效能統計資料。"
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3365,7 +3365,7 @@ msgid ""
 msgstr "新檔案和目錄的權限通常是由創建掩碼和目錄掩碼來控制，但繼承權限參數會蓋換它們。當系統上有許多用戶，並允許單一共享有彈性地被每一用戶使用時，這會特別有用處。"
 
 msgid "The public key in RFC 4716 SSH public key file format."
-msgstr ""
+msgstr "公鑰用的是 RFC 4716 SSH 公鑰檔案格式。"
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3898,7 +3898,7 @@ msgid "Vietnam"
 msgstr "越南"
 
 msgid "VirtIO device"
-msgstr ""
+msgstr "VirtIO 裝置"
 
 msgid "Volume"
 msgstr "磁碟"
