--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.0.7) stable; urgency=low
+
+  * Fix various issues.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 09 May 2015 02:03:32 +0200
+
 openmediavault (2.0.6) stable; urgency=low
 
   * Update locales.
