--- a/deb/libjs-extjs5/debian/changelog
+++ b/deb/libjs-extjs5/debian/changelog
@@ -1,3 +1,9 @@
+libjs-extjs5 (5.1.1.451) stable; urgency=low
+
+  * New upstream release
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 11 May 2015 12:45:35 +0200
+
 libjs-extjs5 (5.1.0.107) stable; urgency=low
 
   * Initial release
