--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 17:14+0200\n"
-"PO-Revision-Date: 2015-05-06 15:15+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-05-07 16:05+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2312,7 +2312,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "Herhangi bir değişiklik yapmadan deneme çalıştırması yapmak."
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "Performans istatistikleri"
 
 msgid "Period of validity"
 msgstr "Geçerlilik süresi"
@@ -3126,7 +3126,7 @@ msgstr "Superuser olarak sisteme giriş yapılıp yapılamayacağını belirler.
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr ""
+msgstr "Sistem performans istatistiklerinin periyodik olarak alınıp alınmayacağını belirler."
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3364,7 +3364,7 @@ msgid ""
 msgstr "Yeni dosya ve klasörler üzerindeki yetkiler normalde oluşturma kalıbı ve klasör kalıbı ile düzenlenir fakat aktarılan yetkiler bu parametreleri geçersiz kılar. Bu özellikle çok kullanıcılı sistemlerde her bir kullanıcının tek bir paylaşımı rahatça kullanabilmesine imkan sağlar."
 
 msgid "The public key in RFC 4716 SSH public key file format."
-msgstr ""
+msgstr "RFC 4716 SSH daki açık anahtar, açık anahtarlama dosya biçimindedir."
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3897,7 +3897,7 @@ msgid "Vietnam"
 msgstr "Vietnam"
 
 msgid "VirtIO device"
-msgstr ""
+msgstr "VirtIO aygıtı"
 
 msgid "Volume"
 msgstr "Birim"
