--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 17:14+0200\n"
-"PO-Revision-Date: 2015-05-06 15:17+0000\n"
+"PO-Revision-Date: 2015-05-11 09:27+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2454,7 +2454,7 @@ msgid "Power mode"
 msgstr "Powermodus"
 
 msgid "Pre-release updates."
-msgstr "Vorabveröffentlichte Aktualisierungen"
+msgstr "Vorabveröffentlichte Aktualisierungen."
 
 msgid "Prefix length"
 msgstr "Präfixlänge"
