--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 17:14+0200\n"
-"PO-Revision-Date: 2015-05-06 15:14+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-05-09 09:52+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2315,7 +2315,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "Realizar una prueba sin realizar cambios"
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "Estadísticas de rendimiento"
 
 msgid "Period of validity"
 msgstr "Periodo de validez"
@@ -3129,7 +3129,7 @@ msgstr "Especifica si está permitido el login como superusuario"
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr ""
+msgstr "Especifique donde quiere que las estadísticas se almacenen periodicamente."
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3367,7 +3367,7 @@ msgid ""
 msgstr "Los permisos sobre los nuevos archivos y directorios se establecen por la máscara de creación y la máscara de directorio, pero el parámetro de herencia de permisos prevalece. Puede ser útil especialmente en sistemas con muchos usuarios para permitir una utilización de una misma compartición de una forma flexible para cada usuario."
 
 msgid "The public key in RFC 4716 SSH public key file format."
-msgstr ""
+msgstr "La clave pública SSH en formato RFC 4716."
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3900,7 +3900,7 @@ msgid "Vietnam"
 msgstr "Vietnam"
 
 msgid "VirtIO device"
-msgstr ""
+msgstr "Dispositivo VirtIO."
 
 msgid "Volume"
 msgstr "Volumen"
