--- a/deb/openmediavault/usr/share/openmediavault/locale/ko_KR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ko_KR/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 17:14+0200\n"
-"PO-Revision-Date: 2015-05-06 15:14+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-05-11 10:58+0000\n"
+"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -200,10 +200,10 @@ msgid "Add"
 msgstr "추가"
 
 msgid "Add VLAN interface"
-msgstr ""
+msgstr "VLAN 인터페이스 추가"
 
 msgid "Add bond interface"
-msgstr ""
+msgstr "결합 인터페이스 추가"
 
 msgid "Add devices to RAID device"
 msgstr "RAID 장치에 디바이스를 추가"
@@ -498,7 +498,7 @@ msgid "Bolivia"
 msgstr "볼리비아"
 
 msgid "Bond"
-msgstr ""
+msgstr "결합"
 
 msgid "Bond options"
 msgstr "본드 옵션"
@@ -771,7 +771,7 @@ msgid "DHCP"
 msgstr "DHCP"
 
 msgid "DNS servers"
-msgstr ""
+msgstr "DNS 서버"
 
 msgid "Daemon"
 msgstr "데몬"
@@ -1021,13 +1021,13 @@ msgid "Edit SSL certificate"
 msgstr "SSL 인증 편집"
 
 msgid "Edit VLAN interface"
-msgstr ""
+msgstr "VLAN 인터페이스 편집"
 
 msgid "Edit bond interface"
-msgstr ""
+msgstr "결합 인터페이스 편집"
 
 msgid "Edit ethernet interface"
-msgstr ""
+msgstr "이더넷 인터페이스 편집"
 
 msgid "Edit firewall rule"
 msgstr "방화벽 규칙 편집"
@@ -1259,7 +1259,7 @@ msgid "Failed to get list of network interface devices"
 msgstr "네트워크 인터페이스 장치 목록을 가져오지 못했습니다"
 
 msgid "Failed to get list of unused network interface devices"
-msgstr ""
+msgstr "사용되지 않은 네트워크 인터페이스 장치들의 목록을 얻지 못했습니다."
 
 msgid "Failed to get list of users."
 msgstr "사용자 목록을 가져오지 못했습니다."
@@ -1669,7 +1669,7 @@ msgid "Invalid group name"
 msgstr "잘못된 그룹 이름"
 
 msgid "Invalid host name"
-msgstr ""
+msgstr "유효하지 않"
 
 msgid "Invalid line: %s"
 msgstr "잘못된 줄: %s"
@@ -2284,7 +2284,7 @@ msgid "Paraguay"
 msgstr "파라과이"
 
 msgid "Parent interface"
-msgstr ""
+msgstr "부모 인터페이스"
 
 msgid "Passive FTP"
 msgstr "수동 FTP"
@@ -2314,7 +2314,7 @@ msgid "Perform a trial run with no changes made"
 msgstr "변경이 생기지 않는 시동작을 수행합니다."
 
 msgid "Performance statistics"
-msgstr ""
+msgstr "성능 통계"
 
 msgid "Period of validity"
 msgstr "유효성 주기"
@@ -2404,7 +2404,7 @@ msgstr "먼저 볼륨을 선택하세요."
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
-msgstr ""
+msgstr "새 파일들이 허용된다면 공유된 폴더가 공개적으로 쓰기가 가능한지 확인해주시길 바랍니다."
 
 msgid ""
 "Please note that no communication with the system is possible during this "
@@ -2541,10 +2541,10 @@ msgid "RAID 10"
 msgstr "RAID 10"
 
 msgid "RAID 2"
-msgstr ""
+msgstr "RAID 2"
 
 msgid "RAID 3"
-msgstr ""
+msgstr "RAID 3"
 
 msgid "RAID 4"
 msgstr "RAID 4"
@@ -2631,7 +2631,7 @@ msgid "Remove"
 msgstr "제거"
 
 msgid "Remove devices from RAID device"
-msgstr ""
+msgstr "RAID 장치로부터 장치들을 제거"
 
 msgid "Replace"
 msgstr "대체"
@@ -2814,7 +2814,7 @@ msgid "Scheduling"
 msgstr "일정"
 
 msgid "Search domains"
-msgstr ""
+msgstr "도메인을 검색합니다."
 
 msgid "Secondary email"
 msgstr "보조 전자우편"
@@ -2859,10 +2859,10 @@ msgid "Select a language ..."
 msgstr "언어를 선택하세요 ..."
 
 msgid "Select a parent interface ..."
-msgstr ""
+msgstr "부모 인터페이스를 선택하세요 ..."
 
 msgid "Select a primary interface ..."
-msgstr ""
+msgstr "주 인터페이스를 선택하세요 ..."
 
 msgid "Select a protocol ..."
 msgstr "프로토콜을 선택하세요 ..."
@@ -2883,7 +2883,7 @@ msgid "Select devices to be added to the RAID device"
 msgstr "RAID 장치에 추가될 장치를 선택하세요"
 
 msgid "Select devices to be removed from the RAID device."
-msgstr ""
+msgstr "RAID 장치로부터 제거될 장치들을 선택하세요."
 
 msgid "Select or enter a user name ..."
 msgstr "사용자 이름을 선택 또는 입력하세요 ..."
@@ -3128,7 +3128,7 @@ msgstr "수퍼유저로 로그인이 가능하게 할 것인지 지정합니다.
 msgid ""
 "Specifies whether the system performance statistics are collected "
 "periodically."
-msgstr ""
+msgstr "시스템 성능 통계가 주기적으로 수집될지 아닌지를 지정합니다."
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3139,7 +3139,7 @@ msgid "Specifies which slave is the primary device."
 msgstr "주 장치의 보조를 지정합니다."
 
 msgid "Speed"
-msgstr ""
+msgstr "속도"
 
 msgid "Spindown time"
 msgstr "스핀다운 시간"
@@ -3333,7 +3333,7 @@ msgid "The name of the share."
 msgstr "공유 이름"
 
 msgid "The name servers are used to look up host names on the network."
-msgstr ""
+msgstr "이름 서버는 네트워크 상에서 호스트 이름을 검색할 때 사용됩니다."
 
 msgid "The number of days the certificate is valid for."
 msgstr "이 인증서가 유효한 일수"
@@ -3366,7 +3366,7 @@ msgid ""
 msgstr "새로운 파일과 경로의 권한은 기본적으로 생성 마스크와 디렉터리 마스크가 지배하지만 권한 상속 패러미터가 이것을 덮어씁니다. 많은 사용자에게 단일 공유를 허용하고 각 사용자에 의해 유동적으로 사용되는 시스템에 부분적으로 유용할 수 있습니다."
 
 msgid "The public key in RFC 4716 SSH public key file format."
-msgstr ""
+msgstr "RFC 4716 공개 키 파일 포맷에 해당되는 공개 키."
 
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
@@ -3454,27 +3454,27 @@ msgid "This field should be a IPv6 network address in CIDR notation"
 msgstr "이 영역은 CIDR 표기법으로 표기된 IPv6 네트워크 주소여야 합니다."
 
 msgid "This field should be a domain name or an IP address"
-msgstr ""
+msgstr "이 항목은 도메인 이름이거나 IP 주소여야 합니다."
 
 msgid "This field should be a domain name or an IPv4 address"
-msgstr ""
+msgstr "이 항목은 도메인 이름이거나 IPv4 주소여야 합니다."
 
 msgid "This field should be a host name or an IP address"
-msgstr ""
+msgstr "이 항목은 호스트 이름이나 IP 주소여야 합니다."
 
 msgid "This field should be a host name or an IPv4 address"
-msgstr ""
+msgstr "이 항목은 호스트 이름이거나 IPv4 주소여야 합니다."
 
 msgid "This field should be a list of domain names or IP addresses"
-msgstr ""
+msgstr "이 항목은 도메인 이름들이나 IP 주소들의 목록이어야 합니다."
 
 msgid ""
 "This field should be a list of domain names or IP addresses seperated by <,>"
 " or <;>"
-msgstr ""
+msgstr "이 항목은 <,>이나 <;>으로 구분되는 도메인 이름들이나 IP 주소들의 목록이어야 합니다."
 
 msgid "This field should be a list of host names or IP addresses"
-msgstr ""
+msgstr "이 항목은 호스트 이름들이나 IP"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3869,10 +3869,10 @@ msgid "Uzbekistan"
 msgstr "우즈베키스탄"
 
 msgid "VLAN"
-msgstr ""
+msgstr "VLAN"
 
 msgid "VLAN id"
-msgstr ""
+msgstr "VLAN 식별자"
 
 msgid "Valid to"
 msgstr "유효"
@@ -3899,7 +3899,7 @@ msgid "Vietnam"
 msgstr "베트남"
 
 msgid "VirtIO device"
-msgstr ""
+msgstr "VirtIO 장치"
 
 msgid "Volume"
 msgstr "볼륨"
