--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.0.8) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 11 May 2015 21:53:52 +0200
+
 openmediavault (2.0.7) stable; urgency=low
 
   * Update locales.
