* Fix APT::Default-Release 'stable' issue. * Update locales.

--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-06 17:14+0200\n"
-"PO-Revision-Date: 2015-05-11 09:27+0000\n"
+"POT-Creation-Date: 2015-05-14 10:53+0200\n"
+"PO-Revision-Date: 2015-05-14 08:55+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -3670,6 +3670,9 @@ msgstr "Tokelau"
 
 msgid "Tonga"
 msgstr "Tonga"
+
+msgid "Total"
+msgstr "Gesamt"
 
 msgid "Transfer log"
 msgstr "Übertragungsprotokoll"
