--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (2.0.8) stable; urgency=low
 
-  *
+  * Update locales.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 11 May 2015 21:53:52 +0200
 
@@ -89,6 +89,7 @@ openmediavault (2.0) stable; urgency=low
 openmediavault (1.19) stable; urgency=low
 
   * Various code improvements.
+  * Fix APT::Default-Release 'stable' issue.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 May 2015 19:31:23 +0200
 
