--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (1.19) stable; urgency=low
 
   * Various code improvements.
+  * Fix APT::Default-Release 'stable' issue.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 May 2015 19:31:23 +0200
 
