--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.0.8) stable; urgency=low
 
   * Update locales.
+  * Fix checkbox bug in the privilege grid panels.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 11 May 2015 21:53:52 +0200
 
