--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,8 @@ openmediavault (2.0.8) stable; urgency=low
 
   * Update locales.
   * Fix checkbox bug in the privilege grid panels.
+  * Change network interface format in database to be able to add new
+    types like WLAN/bridge/... very easy.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 11 May 2015 21:53:52 +0200
 
